@@ -28,8 +28,11 @@
   error condition occurs.  Previous versions did not set the exit status so
   it was always zero.  Patch by Luke Weber.
 
-- ``supervisorctl reload`` now gives an error message if an argument is
+- ``supervisorctl reload`` now show an error message if an argument is
   given.  Patch by Joel Krauska.
+
+- ``supervisorctl`` commands ``avail``, ``reread``, and ``version`` now show
+  an error message if an argument is given.
 
 3.3.1 (2016-08-02)
 ------------------
